Replace Enter key navigation with button
Replaced keydown event listener with a button for navigation.

--- a/index.html
+++ b/index.html
@@ -48,13 +48,12 @@
     </style>
 </head>
 <body>
-    <script>
-        document.addEventListener('keydown', function(event) {
-            if (event.key === 'Enter') {
-                window.location.href = 'login.php';
-            }
-        });
-    </script>
+   <div style="text-align: center; margin-top: 20px;">
+        <button onclick="window.location.href='login.php'" style="padding: 10px 20px; font-size: 16px; cursor: pointer;">
+            Go to Login Page
+        </button>
+    </div>
+
     <div class="container">
         <div class="hero">
             <h1>GG Softwares</h1>
